--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,38 @@
 <footer class="dark">
   <div class="container">
-    <div class="row my-3">
-      <div class="col text-center">
-        <small class="text-muted">&copy; dorr.in. All rights reserved.</small>
+    <div class="row">
+      <div class="d-none d-lg-block col-sm-4 col-md-2 my-3 text-sm-right">
+      </div>
+      <div class="col-sm-5 col-md-4 my-3 text-center text-sm-right text-md-left">
+        <h6>
+          
+          <small class="text-muted">&copy; Maurice Spiewack<br />All rights reserved.</small>
+        </h6>
+      </div>
+      <div class="col-6 col-sm-2 col-md-2 my-sm-3 text-right text-sm-left">
+        <small>
+          <ul class="list-unstyled">
+            {% for item in site.data.navigation %}
+              <li><a href="{{ item.link }}">{{ item.name }}</li>
+            {% endfor %}
+          </ul>
+        </small>
+      </div>
+      <div class="col-6 col-sm-5 col-md-4 my-sm-3 text-left text-sm-left">
+        <small>
+          <ul class="list-unstyled">
+            <li><a href="https://www.linkedin.com/in/mspiew/">
+              <span class="icon-linkedin"> </span>
+              <span class="d-none d-sm-inline">Maurice on </span>
+              LinkedIn
+            </a></li>
+            <li><a href="https://github.com/mdorr">
+              <span class="icon-github"> </span>
+              <span class="d-none d-sm-inline">Maurice on </span>
+              GitHub
+            </a></li>
+          </ul>
+        </small>
       </div>
     </div>
   </div>
