--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -4,6 +4,7 @@
 @import "icons";
 @import "variables";
 @import "bootstrap/scss/bootstrap";
+@import "site_defaults";
 @import "background";
 @import "themes";
 @import "footer";
